--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,7 +41,6 @@
       "react-app/jest"
     ]
   },
-  
   "devDependencies": {
     "babel-plugin-styled-components": "^1.13.2"
   }
